--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
 body{
 margin:0;
 font-family:Arial, sans-serif;
-background:url("file_00000000e5647209a6f0034bc9238384.png") no-repeat center center fixed;
-background-size:cover;
+background-color:black;
+background-image:url("file_00000000e5647209a6f0034bc9238384.png");
+background-repeat:no-repeat;
+background-position:center center;
+background-size:contain;
+background-attachment:fixed;
 color:white;
 text-align:center;
 }
@@ -121,6 +125,7 @@ border-radius:10px;
 width:80%;
 }
 
+/* VISUALIZER */
 canvas{
 width:100%;
 height:120px;
