--- a/index.html
+++ b/index.html
@@ -156,13 +156,33 @@ TREBLE<br><input type="range" id="treble" min="-30" max="30" value="0">
 <script>
 
 const songs=[
+
+/* OLD SONGS */
 "03 - Red Hot Chili Peppers - Californication.mp3",
 "04 - Avenged Sevenfold - Buried Alive.mp3",
 "05 - Red Hot Chili Peppers - Scar Tissue.mp3",
 "06 - Red Hot Chili Peppers - Snow (Hey Oh).mp3",
 "07 - Linkin Park - What I've Done.mp3",
 "10 - Avenged Sevenfold - Unholy Confessions.mp3",
-"13 - Avenged Sevenfold - Seize the Day.mp3"
+"13 - Avenged Sevenfold - Seize the Day.mp3",
+
+/* NEW SONGS */
+"01 - Director's Cut.mp3",
+"02 - Seksi! Seksi!.mp3",
+"03 - Martyr Nyebara.mp3",
+"04 - Narda.mp3",
+"05 - Chiksilog.mp3",
+"06 - Sobrang Init.mp3",
+"07 - A.I.D.S.mp3",
+"08 - Shoot Dat Bol.mp3",
+"09 - Ambisyoso.mp3",
+"10 - Discokwela.mp3",
+"11 - Petix.mp3",
+"12 - My Tender Bear.mp3",
+"13 - Apir Day.mp3",
+"14 - K.K.K.mp3",
+"15 - Narda (Acoustic).mp3"
+
 ];
 
 const audio=document.getElementById("audio");
