--- a/index.html
+++ b/index.html
@@ -155,18 +155,9 @@ TREBLE<br><input type="range" id="treble" min="-30" max="30" value="0">
 
 <script>
 
-const songs=[
+const songs = [
 
-/* OLD SONGS */
-"03 - Red Hot Chili Peppers - Californication.mp3",
-"04 - Avenged Sevenfold - Buried Alive.mp3",
-"05 - Red Hot Chili Peppers - Scar Tissue.mp3",
-"06 - Red Hot Chili Peppers - Snow (Hey Oh).mp3",
-"07 - Linkin Park - What I've Done.mp3",
-"10 - Avenged Sevenfold - Unholy Confessions.mp3",
-"13 - Avenged Sevenfold - Seize the Day.mp3",
-
-/* NEW SONGS */
+/* ===== OPM ===== */
 "01 - Director's Cut.mp3",
 "02 - Seksi! Seksi!.mp3",
 "03 - Martyr Nyebara.mp3",
@@ -181,7 +172,38 @@ const songs=[
 "12 - My Tender Bear.mp3",
 "13 - Apir Day.mp3",
 "14 - K.K.K.mp3",
-"15 - Narda (Acoustic).mp3"
+"15 - Narda (Acoustic).mp3",
+
+/* ===== RED HOT CHILI PEPPERS ===== */
+"03 - Red Hot Chili Peppers - Californication.mp3",
+"05 - Red Hot Chili Peppers - Scar Tissue.mp3",
+"06 - Red Hot Chili Peppers - Snow (Hey Oh).mp3",
+"09 - Red Hot Chili Peppers - Otherside.mp3",
+"11 - Red Hot Chili Peppers - Under The Bridge.mp3",
+"13 - Red Hot Chili Peppers - By The Way.mp3",
+"13 - Red Hot Chili Peppers - Black Summer.mp3",
+"14 - Red Hot Chili Peppers - Dani California.mp3",
+"35 - Red Hot Chili Peppers - Othersong.mp3",
+"44 - Red Hot Chili Peppers - Pink as Floyd.mp3",
+
+/* ===== LINKIN PARK ===== */
+"07 - Linkin Park - What I've Done.mp3",
+"13 - Linkin Park - Bleed It Out.mp3",
+"15 - Linkin Park - Given Up.mp3",
+"17 - JAY-Z - Numb - Encore.mp3",
+"29 - Linkin Park - In Pieces.mp3",
+"31 - Linkin Park - New Divide.mp3",
+"33 - Linkin Park - Valentine's Day.mp3",
+"36 - Linkin Park - Hands Held High.mp3",
+
+/* ===== AVENGED SEVENFOLD ===== */
+"04 - Avenged Sevenfold - Buried Alive.mp3",
+"10 - Avenged Sevenfold - Unholy Confessions.mp3",
+"13 - Avenged Sevenfold - Seize the Day.mp3",
+"14 - Avenged Sevenfold - Nobody.mp3",
+"18 - Avenged Sevenfold - Blinded In Chains.mp3",
+"35 - Avenged Sevenfold - 4:00 AM.mp3",
+"37 - Avenged Sevenfold - Critical Acclaim.mp3"
 
 ];
 
